--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,31 +11,51 @@
 
 #my_config
 
-#remove borders
-for_window [class="^.*"] border pixel 0
+#remove decorations, add some border
+for_window [class="^.*"] border pixel 3
 
-#set dpi for my stupid asus screen
+
+set $bg-color 	         #583C4A
+set $bd-color		     #A4927D
+set $inactive-bg-color   #583C28
+set $inactive-bd-color	 #583C28
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+#				            border			background		text	 	 	     indicator	child border
+client.focused          	$bd-color		$bg-color		$text-color   		 $bd-color	$bd-color
+client.unfocused        	$bg-color		$bg-color 		$inactive-text-color $bg-color	$bg-color
+client.focused_inactive		$bg-color		$bg-color	 	$inactive-text-color $bg-color	$bg-color
+client.urgent           	$bg-color   	$bg-color		$text-color		     $bg-color	$bg-color
+client.background  					        $bg-color
+
+
+#fix DPI
 exec xrandr --dpi 90
 
 #set keybinding for my stupid ausus keyboard
 bindsym XF86KbdBrightnessDown exec "asus-kbd-backlight down"
 bindsym XF86KbdBrightnessUp exec "asus-kbd-backlight up"
+bindsym XF86Launch6 exec "~/scripts/toogle_backlight.sh"
 bindsym Print exec scrot
 
+#add keyboard shortcuts
+bindsym $mod+F exec "firefox"
+
 #start programs to make it a desktop
-exec dex -a
-exec --no-startup-id nitrogen --restore #wallpaper managed via nitrogen
-exec volumeicon
-exec compton --config $HOME/.config/compton.conf -b
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec --no-startup-id nm-applet
+exec dex -a                                                 #execute .desktop files
+exec --no-startup-id nitrogen --restore                     #wallpaper managed via nitrogen
+exec volumeicon                                             #I like to be able to control my volume...
+exec compton --config $HOME/.config/compton.conf -b         #screen compositor
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh #my polybar
+exec --no-startup-id nm-applet                              #Network manager
+exec --no-startup-id kalu
 #exec --no-startup-id "sleep 1;dropbox start"
 
 #set locker program
 exec --no-startup-id "xss-lock -- i3lock -e -d -c 000000"
 
-gaps inner 16
-gaps outer 8
+gaps inner 4
+gaps outer 4
 #end of my_config
 
 set $mod Mod4
@@ -65,8 +85,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920
-
+bindsym $mod+d exec i3-dmenu-desktop --dmenu="dmenu -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920"
+bindsym $mod+c exec dmenu_run -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -104,7 +124,7 @@ bindsym $mod+b split h
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+bindsym $mod+Shift+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
