--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,7 +12,7 @@
 #my_config
 
 #remove decorations, add some border
-for_window [class="^.*"] border pixel 3
+for_window [class="^.*"] border pixel 1
 
 
 set $bg-color 	         #583C4A
@@ -56,6 +56,12 @@ exec --no-startup-id "xss-lock -- i3lock -e -d -c 000000"
 
 gaps inner 4
 gaps outer 4
+
+bindsym $mod+Ctrl+h resize shrink width 1 px or 1 ppt
+bindsym $mod+Ctrl+j resize grow height 1 px or 1 ppt
+bindsym $mod+Ctrl+k resize shrink height 1 px or 1 ppt
+bindsym $mod+Ctrl+l resize grow width 1 px or 1 ppt
+
 #end of my_config
 
 set $mod Mod4
