update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,9 @@ if-shell "test -f ~/.tmux.conf.airline" "source ~/.tmux.conf.airline"
 
 #Fix delay of the ESC key (for vim users!)
 set -sg escape-time 10
+
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
