--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,24 +1,24 @@
-shadow = true;
+shadow = false;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 5;
-shadow-offset-x = 6;
-shadow-offset-y = 6;
+shadow-radius = 0;
+shadow-offset-x = 5;
+shadow-offset-y = 5;
 shadow-opacity = 0.75;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
 shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'" ];
-shadow-ignore-shaped = false;
-xinerama-shadow-crop = false;
-menu-opacity = 0.8;
-inactive-opacity = 0.8;
+shadow-ignore-shaped = true;
+xinerama-shadow-crop = true;
+menu-opacity = 0.95;
+inactive-opacity = 0.9;
 active-opacity = 1.0;
-frame-opacity = 0.7;
+frame-opacity = 0.8;
 inactive-opacity-override = false;
 alpha-step = 0.06;
-inactive-dim = 0.0;
+inactive-dim = 0.1;
 blur-kern = "3x3box";
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 fading = true;
@@ -50,3 +50,6 @@ wintypes :
     focus = true;
   };
 };
+blur-background = true;
+blur-background-frame = true;
+fade-delta = 6;
