--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set-option -g status-utf8 on
 set-window-option -g utf8 on
 
 # Set 256-colour terminal
-#set -g default-terminal "screen-256color"
+#set -g default-terminal "xterm-termite"
 
 # Number of lines held in window history
 set -g history-limit 10000
