--- a/.config/termite/config
+++ b/.config/termite/config
@@ -78,7 +78,8 @@ cursor_shape = block
 foreground      = #e8dfd6
 foreground_bold = #e8dfd6
 cursor          = #e8dfd6
-background      = #021b21
+#background      = #021b21
+background = rgba(2, 27, 33, 0.8)
 
 # black
 color0  = #032c36
