--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,7 +55,7 @@ exec --no-startup-id nvidia-settings --load-config-only
 exec --no-startup-id "xss-lock -- i3lock -e -d -c 000000"
 
 gaps inner 4
-gaps outer 4
+gaps outer 16
 
 bindsym $mod+Ctrl+h resize shrink width 1 px or 1 ppt
 bindsym $mod+Ctrl+j resize grow height 1 px or 1 ppt
@@ -91,8 +91,9 @@ bindsym $mod+Return exec termite
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec i3-dmenu-desktop --dmenu="dmenu -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920"
-bindsym $mod+c exec dmenu_run -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920
+bindsym $mod+d exec rofi -show run -display-run ''
+#bindsym $mod+d exec i3-dmenu-desktop --dmenu="dmenu -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920"
+#bindsym $mod+c exec dmenu_run -fn 'Droid Sans Mono-20' -x 0 -y 30 -w 1920
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
