add vundle submodule and add compton config file without errors

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule ".oh-my-zsh/custom/plugins/zsh-autosuggestions"]
 	path = .oh-my-zsh/custom/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule ".config/nvim/bundle/Vundle.vim"]
+	path = .config/nvim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim.git
