--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -33,9 +33,9 @@ alpha-step = 0.06;
 blur-background = true;
  blur-background-frame = true;
 blur-method = "kawase";
-blur-strength = 10;
+blur-strength = 5;
 #blur-kern = "3x3box";
-#blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 blur-background-fixed = true;
 blur-background-exclude = [
 #	"window_type = 'dock'",
