--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,15 +1,15 @@
 # Shadow
-ehadow = true;
+shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-opacity = 0.7;
-shadow-red = 0.0;
-shadow-green = 0.0;
-shadow-blue = 0.0;
+shadow-radius = 15;
+shadow-offset-x = 7;
+shadow-offset-y = 7;
+shadow-opacity = 1;
+shadow-red = 0.08;
+shadow-green = 0.07;
+shadow-blue = 0.05;
 shadow-exclude = [
 	"name = 'Notification'",
 	"class_g = 'Conky'",
@@ -19,11 +19,11 @@ shadow-exclude = [
 ];
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude-reg = "x10+0+0";
-# xinerama-shadow-crop = true;
+ xinerama-shadow-crop = true;
 
 # Opacity
 menu-opacity = 0.8;
-inactive-opacity = 0.8;
+inactive-opacity = 0.9;
 # active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
@@ -39,7 +39,7 @@ blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 blur-background-fixed = true;
 blur-background-exclude = [
 #	"window_type = 'dock'",
-	"window_type = 'desktop'",
+#	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
@@ -47,8 +47,8 @@ blur-background-exclude = [
 # Fading
 fading = true;
 fade-delta = 30;
-fade-in-step = 0.09;
-fade-out-step = 0.09;
+fade-in-step = 0.1;
+fade-out-step = 0.1;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
 fade-exclude = [ ];
@@ -60,9 +60,9 @@ mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
+refresh-rate = 60;
 vsync = "none";
-dbe = false;
+dbe = true;
 paint-on-overlay = true;
 # sw-opti = true;
 # unredir-if-possible = true;
@@ -76,11 +76,10 @@ invert-color-include = [ ];
 
 # GLX backend
 # glx-no-stencil = true;
-glx-copy-from-front = false;
 # glx-use-copysubbuffermesa = true;
 # glx-no-rebind-pixmap = true;
 glx-swap-method = "undefined";
- glx-use-gpushader4 = true;
+glx-use-gpushader4 = true;
 # xrender-sync = true;
 # xrender-sync-fence = true;
 
