--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,8 +18,8 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #021b21
-background-alt = #041d23
+background = #CC021b21
+background-alt = #CC041d23
 ;foreground = ${xrdb:color7:#222}
 foreground = #e8dfd6
 foreground-alt = #e8dfd6
@@ -30,22 +30,20 @@ alert = #bd2c40
 
 [bar/base]
 width = 100%
-height = 20
+height = 30
 radius = 0
 fixed-center = true
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 3
+line-size = 5
 line-color = #f00
-
 border-size = 0
 border-color = #0000
 
-padding-left = 1
-padding-right = 1
+padding = 0
 
-module-margin-left =  1
-module-margin-right = 1
+module-margin-left =  3
+module-margin-right = 3
 
 font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
@@ -65,15 +63,16 @@ modules-center =
 [bar/top]
 inherit = bar/base
 
-modules-left = i3
-modules-center =
+modules-left =  i3
+modules-right = powermenu battery xbacklight
 ;modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
-modules-right =  battery date
-tray-position = center
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
-
+modules-center =   date
+tray-position = right
+tray-padding = 1
+tray-transparent = true
+tray-background = ${colors.background}
+tray-scale = 1
+tray-offset-x = 0
 ;wm-restack = bspwm
 
 
@@ -211,16 +210,16 @@ bar-progress-empty = -
 type = internal/xbacklight
 
 format = <label> <bar>
-label = BL
+label = 
 
-bar-width = 10
+bar-width = 5
 bar-indicator = |
 bar-indicator-foreground = #fff
 bar-indicator-font = 1
-bar-fill = ─
+bar-fill = "1"
 bar-fill-font = 1
 bar-fill-foreground = #9f78e1
-bar-empty = ─
+bar-empty = "0"
 bar-empty-font = 1
 bar-empty-foreground = ${colors.foreground-alt}
 
@@ -285,15 +284,15 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1
 
 date =
-date-alt = " %Y-%m-%d"
+date-alt = "%d %m %Y"
 
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -408,39 +407,37 @@ ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
-
 expand-right = true
+format-spacing = 2
 
-format-spacing = 1
-
-label-open = 
+label-open = 
 label-open-foreground = ${colors.secondary}
-label-close =  cancel
+label-close = 
 label-close-foreground = ${colors.secondary}
-label-separator = |
+label-separator = "|"
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = reboot
+menu-0-0 = 
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = 
 menu-0-1-exec = menu-open-2
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
+menu-1-1 = 
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
+menu-2-0 = 
 menu-2-0-exec = sudo poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+compositing-background = xor
+#compositing-background = screen
+#compositing-foreground = source
+compositing-border = over
 
 [global/wm]
 margin-top = 0
