--- a/.config/termite/config
+++ b/.config/termite/config
@@ -7,12 +7,12 @@ font = DroidSansMono Nerd Font Mono 12
 #fullscreen = true
 #geometry = 640x480
 #icon_name = terminal
-#mouse_autohide = false
+mouse_autohide = true
 #scroll_on_output = false
 #scroll_on_keystroke = true
 # Length of the scrollback buffer, 0 disabled the scrollback buffer
 # and setting it to a negative value means "infinite scrollback"
-scrollback_lines = 10000
+scrollback_lines = -1
 #search_wrap = true
 #urgent_on_bell = true
 hyperlinks = true
@@ -38,39 +38,6 @@ cursor_shape = block
 # "off", "left" or "right"
 #scrollbar = off
 
-# [colors]
-# # If both of these are unset, cursor falls back to the foreground color,
-# # and cursor_foreground falls back to the background color.
-# #cursor = #dcdccc
-# #cursor_foreground = #dcdccc
-#
-# #foreground = #dcdccc
-# #foreground_bold = #ffffff
-# #background = #3f3f3f
-#
-# # 20% background transparency (requires a compositor)
-# background = rgba(22, 33, 63, 0.8)
-#
-# # If unset, will reverse foreground and background
-# highlight = #2f2f2f
-#
-# # Colors from color0 to color254 can be set
-# color0 = #3f3f3f
-# color1 = #705050
-# color2 = #60b48a
-# color3 = #dfaf8f
-# color4 = #506070
-# color5 = #dc8cc3
-# color6 = #8cd0d3
-# color7 = #dcdccc
-# color8 = #709080
-# color9 = #dca3a3
-# color10 = #c3bf9f
-# color11 = #f0dfaf
-# color12 = #94bff3
-# color13 = #ec93d3
-# color14 = #93e0e3
-# color15 = #ffffff
 
 [colors]
 
@@ -79,7 +46,7 @@ foreground      = #e8dfd6
 foreground_bold = #e8dfd6
 cursor          = #e8dfd6
 #background      = #021b21
-background = rgba(2, 27, 33, 0.8)
+background = rgba(2, 27, 33, 0.95)
 
 # black
 color0  = #032c36
