--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -218,7 +218,7 @@ bar-indicator-foreground = #fff
 bar-indicator-font = 1
 bar-fill = "1"
 bar-fill-font = 1
-bar-fill-foreground = #9f78e1
+bar-fill-foreground = #ccc
 bar-empty = "0"
 bar-empty-font = 1
 bar-empty-foreground = ${colors.foreground-alt}
@@ -425,10 +425,10 @@ menu-0-1-exec = menu-open-2
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = 
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = reboot
 
 menu-2-0 = 
-menu-2-0-exec = sudo poweroff
+menu-2-0-exec =  poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
